# GlueMegara

./: LICENSE  README.md  config.py  pyproject.toml  setup.cfg  setup.py
megara_vis_glue/: config.py  setup.py
megara_visual_glue/: __init__.py  config.py  data_viewer.py  setup.cfg  setup.py
